<resources>
    <string name="app_name">Last Torture</string>
    <string name="name">Name</string>
    <string name="organization_id">Organization Id</string>
    <string name="type">Type</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="breed">Breed</string>
    <string name="_breed">Breed:</string>
    <string name="back">Back</string>
</resources>
